Fix Scroll Button Z-index

--- a/sass/KPC/home/_webdoor.sass
+++ b/sass/KPC/home/_webdoor.sass
@@ -76,3 +76,4 @@ section.site-webdoor
     margin-bottom: 2.5rem
     left: 0
     right: 0
+    z-index: 2
